# CuteDAQ

./: CMakeLists.txt  PLANS.md  README.md  TODO.md
extras/: build.sh  server  server.cpp
include/: csvfile.h  daq.hpp  datetime_str_util.h  decode.hpp  my_socket_client.hpp  my_sqlite_api.hpp
py/: README.md  acquire.py  daq.py  decode.py  dict_writer.py  main.py  run_daq
src/: daq.cpp
